--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,11 +119,13 @@ a {
 }
 
 .note-page-header {
-	padding: 1rem;
+	display: flex;
+	align-content: center;
+	justify-content: space-between;
+	padding: 1rem 1rem 0 1rem;
 }
 
 .note-page-header a {
-	color: orange;
 	font-size: 18px;
 	font-weight: normal;
 }
@@ -133,7 +135,13 @@ a {
 	height: 90%;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
-	/*background-color: orange;*/
+}
+
+/*Icons*/
+.icons {
+	background-color: orange;
+	border-radius: 50%;
+	padding: 0.25rem;
 }
 
 .note-page-body h3 {
